--- a/css/settings.css
+++ b/css/settings.css
@@ -70,7 +70,6 @@ padding-left: 30px;
 
 dd {
 float: left;
-width: 475px;
 line-height: 25px;
 margin: 0 0 10px 0;
 }
@@ -202,4 +201,66 @@ button.positive, .buttons a.positive{
  color: #D8000C;
  background-color:#FDD5CE;
  background-image: url('../images/error.png');
+}
+
+.help-img {
+    margin: 0;
+    margin-left: 10px;
+}
+td{
+    border-right: 1px solid #BBB;
+    padding: 15px;
+}
+
+table {
+border: 1px solid #BBB;
+border-spacing: 0;
+border-collapse: collapse;
+padding: 6px 5px 10px 5px;
+vertical-align: top;
+}
+th {
+color: white;
+background-color: #6199DF;
+border: 1px solid #4D90FE;
+padding: 6px 10px;
+font-weight: bold;
+}
+
+ #overlay {
+    color:#efefef;
+  }
+  /* container for external content. uses vertical scrollbar, if needed */
+  div.contentWrap {
+    overflow-y:auto;
+    height: 500px;
+  }
+  
+  /* the overlayed element */
+.apple_overlay {
+    display:none;
+    width:840px;
+    padding:35px;
+    font-size:16px;
+    color: white;
+    background-color: black;
+    border-radius: 20px;
+}
+
+/* default close button positioned on upper right corner */
+.apple_overlay .close {
+    background-image:url("../images/close.png");
+    position:absolute; right:5px; top:5px;
+    cursor:pointer;
+    height:35px;
+    width:35px;
+}
+.close:hover {
+    background-color: transparent;
+}
+.close:active {
+    background-color: transparent;
+}
+.close:focus {
+    background-color: transparent;
 }
