--- a/css/settings.css
+++ b/css/settings.css
@@ -3,9 +3,6 @@
     float: left;
 }
 .openid-settings-form{
-    font: 12px/17px Arial, Helvetica, sans-serif;
-    color: #333;
-    background: #ccc;
     padding: 40px 20px 20px 20px;
     border-radius: 10px;
 }
@@ -57,7 +54,7 @@ dl {
     clear: both;
 }
 fieldset{
-    background: #f2f2e6;
+    background: #FCFCFC;
     padding: 10px;
     border: 1px solid #fff;
     border-color: #fff #666661 #666661 #fff;
@@ -78,7 +75,7 @@ legend{
     margin: -20px 0 0;
 }
 .settings .main-fieldset{
-    margin-left: -40px;
+
     width: 100%;
 }
 .settings .vertical-space{
